[tool.poetry]
name = "scGPT"
version = "0.2.1"
description = "Large-scale generative pretrain of single cell using transformer."
license = "MIT"
authors = ["Haotian <subercui@gmail.com>"]
repository = "https://github.com/bowang-lab/scGPT"
homepage = "https://github.com/bowang-lab/scGPT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.12,<3.12"
pandas = ">=1.3.5"
numpy = "<2.0.0"
scanpy = "^1.9.1"
torch = ">=1.13.0"
torchtext = "*"
numba = ">=0.55.1"
scikit-misc = ">=0.1.4"
umap-learn = ">=0.5.3"
leidenalg = ">=0.8.10"
datasets = "^2.3.0"
typing-extensions = "^4.2.0"
transformers = "*"
accelerate = "*"
flash-attn = "==1.0.1"
wandb = "^0.12.3"

[tool.poetry.dev-dependencies]
plotly = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
